Fix Spelling and add Reference

--- a/300100001.md
+++ b/300100001.md
@@ -40,7 +40,7 @@ The [Dings-System](300000007.md) is an "egg-laying, milk-bearing woolly" [Comput
     - Premiere-Pro
 - Digital-Money
     - [Bitcoin](130000023.md)
-    - Etherium
+    - [Ethereum](130000042.md)
 - Smart-Contracts
     - Etherium
 - Communication
