Fix Spelling and add Reference

--- a/300100001.md
+++ b/300100001.md
@@ -42,7 +42,7 @@ The [Dings-System](300000007.md) is an "egg-laying, milk-bearing woolly" [Comput
     - [Bitcoin](130000023.md)
     - [Ethereum](130000042.md)
 - Smart-Contracts
-    - Etherium
+    - [Ethereum](130000042.md)
 - Communication
     - [E-Mail](9000139.md)
     - [WhatsApp](9000139.md)
