--- a/300100001.md
+++ b/300100001.md
@@ -189,3 +189,12 @@ Tbd.
 ### Selling <a id="4090"/>
 
 Tbd.
+
+## Benefits <a id="7000"/>
+
+### Automatic Part-Lists <a id="7010"/>
+
+When combining existing Dings-Objects to new derivative Works, we can automatically create Part-Lists:
+
+- [App-Part-List](400000050.md)
+
