Add Document-Anchor to Reference

--- a/300100001.md
+++ b/300100001.md
@@ -196,5 +196,5 @@ Tbd.
 
 When combining existing Dings-Objects to new derivative Works, we can automatically create Part-Lists:
 
-- [App-Part-List](400000050.md)
+- [App-Part-List](400000050.md#1000)
 
