--- a/300100001.md
+++ b/300100001.md
@@ -6,10 +6,10 @@ All-Dings-Overview is a [Presentation](700062.md), that describes the [Goals](60
 
 Current [Computer-Systems](9000153.md) have lot's of Problems:
 
-- Different Systems, User-Interfaces, Versions ...
-- Bad Interfaces between Systems
-- Data not well connected
-- Systems for Humans vs. Systems for Machines
+- Different Systems, User-Interfaces and Versions
+- Incompatible Interfaces between Systems
+- Not well connected Data
+- Different Systems for Humans and Machines
 - No Control over own Data
 - Unidentified and anonymous Users
 - Chaos
