--- a/300100001.md
+++ b/300100001.md
@@ -46,11 +46,11 @@ The [Dings-System](300000007.md) is an "egg-laying, milk-bearing woolly" [Comput
 - Communication
     - [E-Mail](9000139.md)
     - [WhatsApp](9000139.md)
-    - [Social-Media](241000000.md): [Facebook](240000017.md), [LinkedIn](241000001.md), [Twitter](190000008.md), etc.
+    - [Social-Media](241000000.md): [Facebook](240000017.md), [LinkedIn](241000001.md) or [Twitter](190000008.md)
 - Presenting
     - [Wordpress](404.md)
     - [YouTube](190000001.md)
-    - [Social-Media](241000000.md): [Facebook](240000017.md), [LinkedIn](241000001.md), [Twitter](190000008.md), etc.
+    - [Social-Media](241000000.md): [Facebook](240000017.md), [LinkedIn](241000001.md) or [Twitter](190000008.md)
 
 One Key to [Success](60139.md) is to store good, well defined and correct [Information](60007.md), that then leads to good [Results](60033.md) - In Contrast to current AI-Systems that have to process Tons of Bad-Data with uncertain Outcome.
 
