--- a/300100001.md
+++ b/300100001.md
@@ -54,7 +54,7 @@ The [Dings-System](300000007.md) is an "egg-laying, milk-bearing woolly" [Comput
 
 One Key to [Success](60139.md) is to store good, well defined and correct [Information](60007.md), that then leads to good [Results](60033.md) - In Contrast to current AI-Systems that have to process Tons of Bad-Data with uncertain Outcome.
 
-This is more [Work](60036.md) at the Beginning, but in the End it pays off, because lots of Re-Work can be avoided in the [Future](10000004.md), which leads also to more [Fun](60037.md).
+This is more [Work](60036.md) at the [Beginning](60154.md), but in the End it pays off, because lots of Re-Work can be avoided in the [Future](10000004.md), which leads also to more [Fun](60037.md).
 
 Through the [Connection](60006.md) of [Dings-Objects](300000001.md) much more [Value](700030.md) is created out of your Data and a lot of Redundancy is removed, which saves [Time](10000002.md), [Money](6666.md) and [Energy](10000040.md). The good [Organization](60011.md) allows more [Clarity](700029.md) for the Fight against the current [Chaos](60183.md) in our (personal) Digital-World.
 
