--- a/300100001.md
+++ b/300100001.md
@@ -78,7 +78,7 @@ All [Dings-Objects](300000001.md) have an unique [Dings-Number](300000015.md) th
 
 Each Dings-Object has a [Dings-Name](300000016.md), that can be changed. [References](60039.md) to the Object can use different Names, for Example:
 
-- Besides of Programming [Mike](0.md), is also able to play Tennis.
+- Besides of Programming [Mike](0.md), is also able to play [Tennis](270200000.md).
 
 ### References <a id="2040"/>
 
@@ -90,7 +90,7 @@ $ dings list 0
   - Mike [All-Dings-Overview](300100001)
 ```
 
-The more Documents reference Objects, the more Information is added to the System and Humans or AI are able to find this very easily:
+The more Documents reference Objects, the more Information is added to the System, which then is easy to find for both, Humans as well as Machines:
 
 ```
 $ dings list 1971091151
