--- a/300100001.md
+++ b/300100001.md
@@ -82,7 +82,7 @@ Each Dings-Object has a [Dings-Name](300000016.md), that can be changed. [Refere
 
 ### References <a id="2040"/>
 
-As just seen, Dings-Objects can reference each other, which adds new Information for both Objects, for Example with every [Reference](60039.md) the System automatically learns alternative [Names](60048.md) for Dings-Objects in different Contexts:
+As just seen, Dings-Objects can reference each other, which adds new Information for both Objects, for Example with every [Reference](60039.md) the System automatically learns alternative [Names](60048.md) for Dings-Objects in different [Contexts](600034.md):
 
 ```
 $ dings list 0
