--- a/2000247.md
+++ b/2000247.md
@@ -1,3 +1,7 @@
 # Rsync-Tool
 
 The Rsync-Tool is a [Backup-Tool](2000246.md).
+
+## Links
+
+- Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/Rsync)
