Add Automatic License-Check

--- a/300100001.md
+++ b/300100001.md
@@ -203,3 +203,7 @@ When combining existing Dings-Objects to new derivative Works, we can automatica
 
 - [App-Part-List](400000050.md#1000)
 
+### Automatic License-Check <a id="7020"/>
+
+Because the Terms-and-Conditions of all Dings-Objects included in a derivative Work are known, it is possible to automatically determine the Legal-Status also for the new Creation.
+
