--- a/300100001.md
+++ b/300100001.md
@@ -67,7 +67,7 @@ Through the [Connection](60006.md) of [Dings-Objects](300000001.md) much more [V
 
 ### Objects <a id="2010"/>
 
-There are [Dings-Objects](300000001.md) that are purly digital, as for Example this Document, but there are also Objects that have a Connection to Reality, for Example:
+There are [Dings-Objects](300000001.md), that are purly digital, as for Example this Document, but there are also Objects that have a Connection to Reality, for Example:
 
 - [Michael_Holzheu](0.md)
 - [Muffi](1971091151.md)
