--- a/300100001.md
+++ b/300100001.md
@@ -75,7 +75,7 @@ There are [Dings-Objects](300000001.md), that are purly digital, as for Example 
 
 ### Numbers <a id="2020"/>
 
-All [Dings-Objects](300000001.md) have an unique [Dings-Number](300000015.md) that will be for [Eternity](40001.md). The Numbers can be used for internal [References](60039.md) and as [Address](611002.md) for the Internet or Intranet:
+All [Dings-Objects](300000001.md) have an unique [Dings-Number](300000015.md) that will be for [Eternity](40001.md). The Numbers can be used for internal [References](60039.md) and as [Addresses](611002.md) for the Internet or Intranet:
 
 - Example: [https://dings.site/0.html](0.md)
 
