--- a/300100001.md
+++ b/300100001.md
@@ -141,8 +141,8 @@ The Dings-Objects are presented via [Html-Files](9000134.md), that can be shown 
 There are three security Levels:
 
 - Local
-- Intranet (currently with Password)
-- Internet
+- [Intranet](9200002.md) (currently with Password)
+- [Internet](9200001.md)
 
 ## Use-Cases <a id="4000"/>
 
