--- a/300100001.md
+++ b/300100001.md
@@ -138,7 +138,7 @@ Besides embedding simple Objects like Images or Sound, it is also possible to in
 
 The Dings-Objects are presented via [Html-Files](9000134.md), that can be shown in each [Browser](9000128.md).
 
-There are three security Levels:
+There are three Security-Levels:
 
 - Local
 - [Intranet](9200002.md) (currently with Password)
