--- a/300100001.md
+++ b/300100001.md
@@ -120,7 +120,9 @@ Each Dings-Object has a short [Definition](13000002.md) that should make clear, 
 
 ### Meanings<a id="2060"/>
 
-Like the [Dings-Name](300000016.md), also the [Definition](13000002.md) can change, but the [Meaning](60002.md) of a [Dings-Object](300000001.md) should never change - At least for a given [Location](620002.md) in the [Space-Time-Coninuum](10000027.md). For Example [Muffi](1971091151.md) with the associated [Dings-Number](300000015.md) 1971091151 will always be "The Muffi", that (at the Moment) lives with [My-Fellow-Occupant](88.md).
+Like the [Dings-Name](300000016.md), also the [Definition](13000002.md) can change, but the [Meaning](60002.md) of a [Dings-Object](300000001.md) should never change - At least for a given [Location](620002.md) in the [Space-Time-Coninuum](10000027.md).
+
+For Example [Muffi](1971091151.md) with the associated [Dings-Number](300000015.md) 1971091151 will always be "The Muffi", that (at the Moment) lives with [My-Fellow-Occupant](88.md).
 
 ### Embeddings <a id="2060"/>
 
