--- a/300100001.md
+++ b/300100001.md
@@ -181,9 +181,9 @@ Therefore the User could ask the System for Example:
 
 ### Advertising <a id="4060"/>
 
-If a Dings-User reads [My-Good-Meal-Blog](21.md#3300) and then goes to the [Delhi-Palace](18071962.md), he could add a Comment that he likes or does not like the [Chilli-Chicken](203500004.md).
-In any Case the Delhi-Palace should give a Reward to the Blog-Writer. In Case the User likes the Food, the Writer of the Blog should also get
-a Reward from the Dings-User.
+If a Dings-User reads the [Good-Meal-Blog](21.md#3300) and then goes to the [Delhi-Palace](18071962.md), he could add a Comment that he likes or does not like the [Chilli-Chicken](203500004.md).
+
+In any Case the Delhi-Palace should give a Reward to the Blog-Writer. In Case the User likes the Food, the Writer of the Blog should also get a Reward from the happy Dings-User.
 
 ### Creative-Work <a id="4070"/>
 
