--- a/300100001.md
+++ b/300100001.md
@@ -18,7 +18,7 @@ Current [Computer-Systems](9000153.md) have lot's of Problems:
 
 The [Dings-System](300000007.md) is an "egg-laying, milk-bearing woolly" [Computer-System](9000153.md), that is able to host *all* of your [Data](60001.md) as [Dings-Objects](300000001.md), that can be used for both, [Humans](40000001.md) and [Computers](9000153.md).
 
-For [Transformation](600164.md) of the current [Chaos](60183.md) in into [Order](60010.md) again, it combines all Features of the currently not well linked Systems:
+For [Transformation](600164.md) of the current [Chaos](60183.md) into [Order](60010.md) again, it combines all Features of the currently not well linked Systems:
 
 - Storing
     - [File-Systems](9000025.md)
