--- a/300100001.md
+++ b/300100001.md
@@ -171,13 +171,12 @@ There are three Security-Levels:
 
 ### Accounting <a id="4050"/>
 
-When Bills are stored in the Dings-System half-automatically the correct References are created. For Example, if the Dings-System already knows the Car-Insurance-Number, the Reference to the Contract can be make by automatically using OCR.
-The Car-Insurance already has a Reference to the Car.
+When [Bills](130000002.md) are stored in the Dings-System, half-automatically the correct [References](60039.md) are created. For Example, if the Dings-System already knows the Car-Insurance-Number, the Reference to the Contract can be make by automatically using OCR and of course the Car-Insurance already has a Reference to the associated Car.
 
 Therefore the User could ask the System for Example:
 
 - How much did I pay for my Insurance the last Year?
-- How much did I pay in total for may Car in the last three Years?
+- How much did I pay in Total for may Car in the last three Years?
 
 ### Advertising <a id="4060"/>
 
