--- a/300100001.md
+++ b/300100001.md
@@ -206,5 +206,5 @@ When combining existing Dings-Objects to new derivative Works, we can automatica
 
 ### Automatic License-Check <a id="7020"/>
 
-Because the Terms-and-Conditions of all Dings-Objects included in a derivative Work are known, it is possible to automatically determine the Legal-Status also for the new Creation.
+Because the Terms-and-Conditions of all Dings-Objects included in a derivative Work are well known, it is possible to automatically determine the Legal-Status also for the new Creation.
 
