--- a/300100001.md
+++ b/300100001.md
@@ -2,6 +2,10 @@
 
 All-Dings-Overview is a [Presentation](700062.md), that describes the [Goals](60058.md) and [Concepts](600011.md) of the [Dings-Project](300000006.md).
 
+## Foreward <a id=8000>
+
+In this Description the [Present-Time](640041.md) is used - Even if not all, what is described is already [Reality](40000.md).
+
 ## Problem <a id="6000"/>
 
 Current [Computer-Systems](9000153.md) have lot's of Problems:
