--- a/300100001.md
+++ b/300100001.md
@@ -93,23 +93,20 @@ Each Dings-Object has a [Dings-Name](300000016.md), that can be changed. [Refere
 
 ### References <a id="2040"/>
 
-As just seen, Dings-Objects can reference each other, which adds new [Information](60007.md) for both Objects, for Example with every [Reference](60039.md) the System automatically learns alternative [Names](60048.md) for Dings-Objects in different [Contexts](600034.md):
+As just seen, Dings-Objects can reference each other, which adds new [Information](60007.md) for both of the connected Objects, for Example with every [Reference](60039.md) the System automatically learns alternative [Names](60048.md) for Dings-Objects in different [Contexts](600034.md):
 
 ```
 $ dings list 0
 0 "Michael-Georg_Holzheu"
   - Mike [All-Dings-Overview](300100001)
+  - Michael_Holzheu [My-Pocket-Calculator](1971091108)
+  - Informtaticer [About](21)
+  ...
 ```
 
-The more Documents reference Objects, the more Information is added to the System, which then is easy to find for both, Humans as well as Machines:
+The more Documents reference Objects, the more Information is added to the System, which then is easy to find for both, Humans as well as Machines - For Example the System knows already that Tennis is a Sport and therefore it could find an [Answer](600139.md) the following [Question](600107.md):
 
-```
-$ dings list 1971091151
-1971091151 "Muffi"
-  - Muffi [All-Dings-Overview](300100001)
-  - Muffi [About](21)
-  - Muffi [Muffi-and-Schnuffi-Photo](400000001)
-```
+- Which Sports does [Michael_Holzheu](0.md) do?
 
 ### Users <a id="2042"/>
 
