--- a/600219.md
+++ b/600219.md
@@ -1,3 +1,3 @@
-# Credability
+# Credibility
 
-Credabitliy is a [Measure](10000021.md) for [Trust](60015.md) in a [Statement](600078.md) of a [Thing](60003.md).
+Credibitliy is a [Measure](10000021.md) for [Trust](60015.md) in a [Statement](600078.md) of a [Thing](60003.md).
