--- a/300100001.md
+++ b/300100001.md
@@ -104,7 +104,7 @@ $ dings list 0
   ...
 ```
 
-The more Documents reference Objects, the more Information is added to the System, which then is easy to find for both, Humans as well as Machines - For Example the System knows already that Tennis is a Sport and therefore it could find an [Answer](600139.md) the following [Question](600107.md):
+The more Documents reference Objects, the more Information is added to the System, which then is easy to find for both, Humans as well as Machines - For Example the System knows already, that Tennis is a Sport and therefore it could find an [Answer](600139.md) the following [Question](600107.md):
 
 - Which Sports does [Michael_Holzheu](0.md) do?
 
