--- a/300100001.md
+++ b/300100001.md
@@ -203,13 +203,13 @@ Tbd.
 
 ## Benefits <a id="7000"/>
 
-### Automatic Part-Lists <a id="7010"/>
+### Part-Lists <a id="7010"/>
 
 When combining existing Dings-Objects to new derivative Works, we can automatically create Part-Lists:
 
 - [App-Part-List](400000050.md#1000)
 
-### Automatic License-Check <a id="7020"/>
+### License-Checks <a id="7020"/>
 
 Because the Terms-and-Conditions of all Dings-Objects included in a derivative Work are well known, it is possible to automatically determine the Legal-Status also for the new Creation.
 
