Fix Html (again)

--- a/300100001.md
+++ b/300100001.md
@@ -2,7 +2,7 @@
 
 All-Dings-Overview is a [Presentation](700062.md), that describes the [Goals](60058.md) and [Concepts](600011.md) of the [Dings-Project](300000006.md).
 
-## Foreword <a id=8000/>
+## Foreword <a id="8000"/>
 
 In this Description the [Present-Time](640041.md) is used - Even if not all, what is described is already [Reality](40000.md).
 
