--- a/300100001.md
+++ b/300100001.md
@@ -193,7 +193,7 @@ In any Case the Delhi-Palace should give a Reward to the Blog-Writer. In Case th
 
 Tbd.
 
-### Paiments <a id="4080"/>
+### Payments <a id="4080"/>
 
 Tbd.
 
