--- a/300100001.md
+++ b/300100001.md
@@ -195,7 +195,11 @@ Tbd.
 
 ### Payments <a id="4080"/>
 
-Tbd.
+There are created a lot of [Values](700030.md) in the [Dings-System](300000007.md) - For Example in the Areas of [Education](600121.md), [Entertainment](60010008.md), [Culture](270000000.md) and all Kinds of [Services](600067.md).
+
+Of course the [Creators](600098.md) should get a Reward for their [Work](60036.md), which can payed with [Dings-Coins](300000040.md).
+
+To get a [Feeling](60041.md) for the [Value](700030.md) of a Dings-Coin the [Pretzel Price Index](302000003.md) has been invented.
 
 ### Selling <a id="4090"/>
 
