Add Dings-Coin and References

--- a/302000001.md
+++ b/302000001.md
@@ -13,4 +13,4 @@ My-Brezel-Study is a [Study](640001.md) from [Michael_Holzheu](0.md) about the [
 | [2023.05.04-12:40](21.md#4101)  | Bäckerei-Gehr-Mühlstraße-Tübingen | 0,95 Euro            | All Gehr-Branches have same Price |
 | 2023.05.07-10:45   | [Cafee-Lieb-Bahnhof-Tübingen](2010015.md) | 0,95 Euro                 |                            |
 
-[Brezel-Index](302000003.md): 1,04 Euro
+[Brezel-Index](302000003.md): 1 [Dings-Coin](300000040.md) = 1 [Brezel](203410001.md) = 1,04 [Euro](130000004.md)
