--- a/300100001.md
+++ b/300100001.md
@@ -183,23 +183,23 @@ Therefore the User could ask the System for Example:
 - How much did I pay for my Insurance the last Year?
 - How much did I pay in Total for may Car in the last three Years?
 
+### Payments <a id="4055"/>
+
+There are created and stored a lot of [Values](700030.md) in the [Dings-System](300000007.md) - For Example in the Areas of [Education](600121.md), [Entertainment](60010008.md), [Culture](270000000.md) and all Kinds of [Services](600067.md).
+
+Of course the [Creators](600098.md) should get a [Reward](600222.md) for their [Work](60036.md), which can payed with [Dings-Coins](300000040.md).
+
+To get a better [Feeling](60041.md) for the [Value](700030.md), the [Dings-Coin](130000004.md) is peddged to the [Price](130000012.md) of a [Brezel](203410001.md), which is reflected in the [Pretzel-Price-Index](302000003.md).
+
 ### Advertising <a id="4060"/>
 
 If a Dings-User reads the [Good-Meal-Blog](21.md#3300) and then goes to the [Delhi-Palace](18071962.md), he could add a Comment that he likes or does not like the [Chilli-Chicken](203500004.md).
 
-In any Case the Delhi-Palace should give a Reward to the Blog-Writer. In Case the User likes the Food, the Writer of the Blog should also get a Reward from the happy Dings-User.
+In any Case the Delhi-Palace should give a [Reward](600222.md) to the Blog-Writer. In Case the User likes the Food, the [Creator](600098.md) of the Blog should also get a [Reward](600222.md) from the happy Dings-User.
 
 ### Creative-Work <a id="4070"/>
 
 Tbd.
-
-### Payments <a id="4080"/>
-
-There are created and stored a lot of [Values](700030.md) in the [Dings-System](300000007.md) - For Example in the Areas of [Education](600121.md), [Entertainment](60010008.md), [Culture](270000000.md) and all Kinds of [Services](600067.md).
-
-Of course the [Creators](600098.md) should get a Reward for their [Work](60036.md), which can payed with [Dings-Coins](300000040.md).
-
-To get a better [Feeling](60041.md) for the [Value](700030.md), the [Dings-Coin](130000004.md) is peddged to the [Price](130000012.md) of a [Brezel](203410001.md), which is reflected in the [Pretzel-Price-Index](302000003.md).
 
 ### Selling <a id="4090"/>
 
