--- a/302000001.md
+++ b/302000001.md
@@ -1,16 +1,16 @@
 # My-Brezel-Study
 
-My-Brezel-Study is a [Study](640001.md) from [Michael_Holzheu](0.md) about the [Brezel](203410001.md).
+My-Brezel-Study is a [Study](640001.md) from [Michael_Holzheu](0.md) about [Price](130000012.md) of the [Brezel](203410001.md).
 
 ## Measured-Data
 
-| BCT                | Where                                    | Price                      | Notes                      |
-|:-------------------|:-----------------------------------------|:---------------------------|:---------------------------|
-| 2023.03.13-12:00   | [B2-Bio-Pur-Shop-Balingen](302000002.md) | 1,15 Euro                  |                            |
-| 2023.03.XX-XX:XX   | Location-Forgotten                       | 1,25 Euro                  |                            |
-| 2023.04.22-10:50   | [Bäckerei-Gehr-Hintere-Grabenstraße-Tübingen](2010010.md) | 0,95 Euro |                            |
-| 2023.04.23-14:00   | [OVM-Petrol-Station-Tübingen](2010009.md) | 0,99 Euro                 |                            |
-| [2023.05.04-12:40](21.md#4101)  | Bäckerei-Gehr-Mühlstraße-Tübingen | 0,95 Euro            | All Gehr-Branches have same Price |
-| 2023.05.07-10:45   | [Cafee-Lieb-Bahnhof-Tübingen](2010015.md) | 0,95 Euro                 |                            |
+| BCT                             | Where                                    | Price                      | Notes                      |
+|:--------------------------------|:-----------------------------------------|:---------------------------|:---------------------------|
+| 2023.03.13_12:00                | [B2-Bio-Pur-Shop-Balingen](302000002.md) | 1,15 Euro                  |                            |
+| 2023.03.66_66:66                | Location-Forgotten                       | 1,25 Euro                  |                            |
+| 2023.04.22_10:50                | [Bäckerei-Gehr-Hintere-Grabenstraße-Tübingen](2010010.md) | 0,95 Euro |                            |
+| 2023.04.23_14:00                | [OVM-Petrol-Station-Tübingen](2010009.md) | 0,99 Euro                 |                            |
+| [2023.05.04_12:40](21.md#4101)  | Bäckerei-Gehr-Mühlstraße-Tübingen | 0,95 Euro            | All Gehr-Branches have same Price |
+| 2023.05.07_10:45                | [Cafee-Lieb-Bahnhof-Tübingen](2010015.md) | 0,95 Euro                 |                            |
 
 [Brezel-Index](302000003.md): 1 [Dings-Coin](300000040.md) = 1 [Brezel](203410001.md) = 1,04 [Euro](130000004.md)
