Add and change Articulus

--- a/302000001.md
+++ b/302000001.md
@@ -1,6 +1,6 @@
 # My-Brezel-Study
 
-My-Brezel-Study is a [Study](640001.md) from [Michael_Holzheu](0.md) about [Price](130000012.md) of the [Brezel](203410001.md).
+My-Brezel-Study is a [Study](640001.md) from [Michael_Holzheu](0.md) about the [Price](130000012.md) of a [Brezel](203410001.md).
 
 ## Measured-Data
 
