--- a/300100001.md
+++ b/300100001.md
@@ -174,7 +174,11 @@ There are three Security-Levels:
 
 - [Over-Tone-App](23.md#10500)
 
-### Accounting <a id="4050"/>
+### Creative-Work <a id="4070"/>
+
+Tbd.
+
+### Accounting (Idea) <a id="4050"/>
 
 When [Bills](130000002.md) are stored in the Dings-System, half-automatically the correct [References](60039.md) are created. For Example, if the Dings-System already knows the Car-Insurance-Number, the Reference to the Contract can be make by automatically using OCR and of course the Car-Insurance already has a Reference to the associated Car.
 
@@ -183,7 +187,7 @@ Therefore the User could ask the System for Example:
 - How much did I pay for my Insurance the last Year?
 - How much did I pay in Total for may Car in the last three Years?
 
-### Payments <a id="4055"/>
+### Payments (Idea) <a id="4055"/>
 
 There are created and stored a lot of [Values](700030.md) in the [Dings-System](300000007.md) - For Example in the Areas of [Education](600121.md), [Entertainment](60010008.md), [Culture](270000000.md) and all Kinds of [Services](600067.md).
 
@@ -191,17 +195,13 @@ Of course the [Creators](600098.md) should get a [Reward](600222.md) for their [
 
 To get a better [Feeling](60041.md) for the [Value](700030.md), the [Dings-Coin](130000004.md) is peddged to the [Price](130000012.md) of a [Brezel](203410001.md), which is reflected in the [Pretzel-Price-Index](302000003.md).
 
-### Advertising <a id="4060"/>
+### Advertising (Idea) <a id="4060"/>
 
 If a Dings-User reads the [Good-Meal-Blog](21.md#3300) and then goes to the [Delhi-Palace](18071962.md), he could add a Comment that he likes or does not like the [Chilli-Chicken](203500004.md).
 
 In any Case the Delhi-Palace should give a [Reward](600222.md) to the Blog-Writer. In Case the User likes the Food, the [Creator](600098.md) of the Blog should also get a [Reward](600222.md) from the happy Dings-User.
 
-### Creative-Work <a id="4070"/>
-
-Tbd.
-
-### Selling <a id="4090"/>
+### Selling (Idea) <a id="4090"/>
 
 Tbd.
 
