--- a/300100001.md
+++ b/300100001.md
@@ -52,6 +52,9 @@ For [Transformation](600164.md) of the current [Chaos](60183.md) into [Order](60
 - Digital-Money
     - [Bitcoin](130000023.md)
     - [Ethereum](130000042.md)
+- Selling
+    - [Ebay](240000040.md)
+    - [Amazon](240000004.md)
 - Smart-Contracts
     - [Ethereum](130000042.md)
 - Communication
@@ -203,7 +206,7 @@ In any Case the Delhi-Palace should give a [Reward](600222.md) to the Blog-Write
 
 ### Selling (Idea) <a id="4090"/>
 
-Tbd.
+In the Dings-System all Information is already available for Selling a Thing, for Example the Bills, Photos or Videos of the Item and because of the Search-Function it is easy to find the required Pieces.
 
 ## Benefits <a id="7000"/>
 
