--- a/300100001.md
+++ b/300100001.md
@@ -39,7 +39,7 @@ For [Transformation](600164.md) of the current [Chaos](60183.md) into [Order](60
     - [Wikipedia](190000006.md)
     - [Wikidata](191000001.md)
 - Search & Find
-    - Google-Search
+    - [Google-Search](2000250.md)
 - Analysis
     - [ChatGPT](9000150.md)
 - Reporting / Accounting
