--- a/600069.md
+++ b/600069.md
@@ -1,3 +1,3 @@
-# Compenstation
+# Compensation
 
-Compenstation replaces one important Thing with another.
+Compensation is a [Process](60062.md) with the [Goal](60058.md) of [Balance](600221.md).
