--- a/300100001.md
+++ b/300100001.md
@@ -179,7 +179,7 @@ There are three Security-Levels:
 
 ### Creative-Work <a id="4070"/>
 
-Tbd.
+Already available Dings-Objects, like Sound, Images or Videos can be re-combined with new Objects. The Dings-System provides Tools, that only save the Transformation-Operations, which keeps the Project-Files small. For Dings-Objects only References are used - Therefore each Object is only once on your Hard-Drive.
 
 ### Accounting (Idea) <a id="4050"/>
 
