--- a/300100001.md
+++ b/300100001.md
@@ -221,3 +221,14 @@ When combining existing Dings-Objects to new derivative Works, we can automatica
 
 Because the Terms-and-Conditions of all Dings-Objects included in a derivative Work are well known, it is possible to automatically determine the Legal-Status also for the new Creation.
 
+## Closing-Word <a id="9000"/>
+
+The [Dings-System](300000007.md) is a System *for* [Humans](40000001.md), that encourages the [Good-Old-Habits](41000000.md) again, for Example:
+
+- [Respect](41000005.md)
+- [Discipline](41000004.md)
+- [Gratitude](41000009.md)
+- [Mindfulness](41000010.md)
+- [Fairnness](41000012.md)
+
+Good [Technology](60044.md) is used as [Supporter](600216.md) for the ultivative [Goal](60058.md) of a [Good-Life-For-All](301000010.md).
