--- a/300100001.md
+++ b/300100001.md
@@ -209,6 +209,11 @@ In any Case the Delhi-Palace should give a [Reward](600222.md) to the Blog-Write
 
 In the Dings-System all Information is already available for Selling a Thing, for Example the Bills, Photos or Videos of the Item and because of the Search-Function it is easy to find the required Pieces.
 
+Examples:
+
+- [My-Pocket-Calculator](1971091108.md)
+- [My-Good-Old-Latex-Book](1971091109.md)
+
 ## Benefits <a id="7000"/>
 
 ### Part-Lists <a id="7010"/>
