--- a/1971091109.md
+++ b/1971091109.md
@@ -4,5 +4,5 @@ My-Good-Old-Latex-Book is a [Book](700054.md) about [LaTeX](9300010.md), that [I
 
 ## Photos
 
-![](400000116.jpg)
-![](400000117.jpg)
+![Front-Side](400000116.jpg)
+![Back-Side](400000117.jpg)
