--- a/300100001.md
+++ b/300100001.md
@@ -67,7 +67,7 @@ For [Transformation](600164.md) of the current [Chaos](60183.md) into [Order](60
     - [YouTube](190000001.md)
     - [Social-Media](241000000.md): [Facebook](240000017.md), [LinkedIn](241000001.md) or [Twitter](190000008.md)
 
-One Key to [Success](60139.md) is to store good, well defined and correct [Information](60007.md), that then leads to good [Results](60033.md) - In Contrast to current AI-Systems that have to process Tons of Bad-Data with uncertain Outcome.
+One Key to [Success](60139.md) is to store good, well defined and correct [Information](60007.md), that then leads to good [Results](60033.md) - In Contrast to current [Ai-Systems](9000152.md) that have to process Tons of Bad-Data with uncertain Outcome.
 
 This is more [Work](60036.md) at the [Beginning](60154.md), but in the End it pays off, because lots of Re-Work can be avoided in the [Future](10000004.md), which leads to much more [Fun](60037.md).
 
