Add Contribute and add Verification-Methods

--- a/0.md
+++ b/0.md
@@ -34,3 +34,15 @@ I am simply called [Holyheu](270020000.md) in [Clash-of-Clans](3.md) and on [You
 I worked a lot on [Movies](700018.md), that can be seen on [my](190000002.md) You-Tube-Channel and on [Blogs](10000000001.md), that can be found on [my](192000004.md) Home-Page.
 
 But currently I spend most of my Resources for the [Dings-Project](300000006.md).
+
+## Dings-User
+
+- [Passport]():
+   - Bct-2024.02.04-00:00:00 in Tübingen by [Jay]()
+- [Driving-License]():
+   - Bct-2024.02.04-00:00:00 at [Startup:con-Tübingen-10](199010003.md) by [Jay]()
+- [E-Mail]():
+   - Bct-2024.02.04 by [Michael_Peters]()
+- [Tele-Phone]():
+   - Bct-2024.02.04 by [Michael_Peters]()
+
