--- a/300100001.md
+++ b/300100001.md
@@ -116,8 +116,14 @@ The more Documents reference Objects, the more Information is added to the Syste
 
 The [Dings-User](300000037.md) is a special [Dings-Object](300000001.md) that can be verified by:
 
-- [Digital-Passport](13300004.md)
+- [E-Mail-Address](2000235.md)
+- [GitHub-Account](2000251.md)
+- [Telephone-Number](1000020004.md)
+- Credit-Card-Number
+- Debit-Card-Number
+- Medical-Card-Number
 - [World-Id](170100003.md)
+- Passport-Number
 
 Every [Claim](600028.md) or [Statement](600078.md) in the Dings-System is associated with a [Dings-User](300000037.md), which promotes [Responsibility](60130.md). For Example, if the [Hypothesis](600028.md) of [Michael_Holzheu](0.md), that he is able to play [Tennis](270200000.md) is not [The-Truth](600140.md), this will lead to a Reduction of his [Credibility](600219.md) - Therefore, better take care, what you say!
 
@@ -225,6 +231,10 @@ When combining existing Dings-Objects to new derivative Works, we can automatica
 ### License-Checks <a id="7020"/>
 
 Because the Terms-and-Conditions of all Dings-Objects included in a derivative Work are well known, it is possible to automatically determine the Legal-Status also for the new Creation.
+
+## Contribute <a id="10000"/>
+
+In Order to Contribute you first have to be registered as a [Dings-User](300000037.md). Depending on your User-Verification you can contribute over different [Communication-Systems](1000020002.md), like E-Mail, Telephone or GitHub.
 
 ## Closing-Word <a id="9000"/>
 
