Make it consistent

--- a/300100001.md
+++ b/300100001.md
@@ -232,7 +232,7 @@ When combining existing Dings-Objects to new derivative Works, we can automatica
 
 Because the Terms-and-Conditions of all Dings-Objects included in a derivative Work are well known, it is possible to automatically determine the Legal-Status also for the new Creation.
 
-## Contribute <a id="10000"/>
+## Contributing <a id="10000"/>
 
 In Order to Contribute you first have to be registered as a [Dings-User](300000037.md). Depending on your User-Verification you can contribute over different [Communication-Systems](1000020002.md), like E-Mail, Telephone or GitHub.
 
