--- a/300100001.md
+++ b/300100001.md
@@ -125,7 +125,7 @@ The [Dings-User](300000037.md) is a special [Dings-Object](300000001.md) that ca
 - [World-Id](170100003.md)
 - Passport-Number
 
-Every [Claim](600028.md) or [Statement](600078.md) in the Dings-System is associated with a [Dings-User](300000037.md), which promotes [Responsibility](60130.md). For Example, if the [Hypothesis](600028.md) of [Michael_Holzheu](0.md), that he is able to play [Tennis](270200000.md) is not [The-Truth](600140.md), this will lead to a Reduction of his [Credibility](600219.md) - Therefore, better take care, what you say!
+Every [Claim](600028.md) or [Statement](600078.md) in the Dings-System is associated with a [Dings-User](300000037.md), which promotes [Responsibility](60130.md). For Example, if the [Hypothesis](600028.md) of [Michael_Holzheu](0.md), that he is able to play [Tennis](270200000.md) is *really* [The-Truth](600140.md), this will lead to an Increase of his [Credibility](600219.md).
 
 ### Definitions <a id="2050"/>
 
