--- a/300100001.md
+++ b/300100001.md
@@ -47,9 +47,9 @@ For [Transformation](600164.md) of the current [Chaos](60183.md) into [Order](60
     - SAP
 - Processing
     - [Gimp](9000053.md)
-    - Microsoft-Word
-    - Microsoft-Excel
-    - Premiere-Pro
+    - Word
+    - [Excel](2000221.md)
+    - [Premiere-Pro](2000238.md)
 - Digital-Money
     - [Bitcoin](130000023.md)
     - [Ethereum](130000042.md)
