--- a/300100001.md
+++ b/300100001.md
@@ -151,6 +151,17 @@ Besides embedding simple Objects like Images or Sound, it is also possible to in
 
 ![The-Don't-Waste-App](400000050.quiz)
 
+### Technology <a id="10000"/>
+
+The [Dings-System](300000007.md) runs on almost all [Computer-Platforms](9000153.md), because widespread [Technology](60044.md) is used:
+
+- [Markdown](31.md)
+- [Json](9000194.md)
+- [Python](9010003.md)
+- [Html](9300001.md)
+- [Java-Script](9010007.md)
+- [Php](9010010.md)
+
 ## Presenting <a id="3000"/>
 
 The Dings-Objects are presented via [Html-Files](9000134.md), that can be shown in each [Browser](9000128.md).
