--- a/300100001.md
+++ b/300100001.md
@@ -151,7 +151,7 @@ Besides embedding simple Objects like Images or Sound, it is also possible to in
 
 ![The-Don't-Waste-App](400000050.quiz)
 
-### Technology <a id="10000"/>
+## Technology <a id="10000"/>
 
 The [Dings-System](300000007.md) runs on almost all [Computer-Platforms](9000153.md), because widespread [Technology](60044.md) is used:
 
