--- a/300100001.md
+++ b/300100001.md
@@ -133,6 +133,8 @@ Each Dings-Object has a short [Definition](13000002.md) that should make clear, 
 
 - Michael-Georg_Holzheu is a [Human](40000001.md).
 
+More important, than the [Completness](600014.md) is the [Correctness](600077.md) of a Definition - Therefore the Statements are simple and short.
+
 ### Meanings<a id="2060"/>
 
 Like the [Dings-Name](300000016.md), also the [Definition](13000002.md) can change, but the [Meaning](60002.md) of a [Dings-Object](300000001.md) should never change - At least for a given [Location](620002.md) in the [Space-Time-Coninuum](10000027.md).
