--- a/60002.md
+++ b/60002.md
@@ -1,3 +1,3 @@
 # Meaning
 
-Meaning provides [Information](60002.md) and/or [Importance](404.md) to a (living) [Thing](60003.md).
+Meaning provides [Information](60002.md) and/or [Importance](404.md) to a [Thing](60003.md).
