--- a/300100001.md
+++ b/300100001.md
@@ -246,6 +246,13 @@ When combining existing Dings-Objects to new derivative Works, we can automatica
 
 Because the Terms-and-Conditions of all Dings-Objects included in a derivative Work are well known, it is possible to automatically determine the Legal-Status also for the new Creation.
 
+### Graph-File-System <a id="7030/>
+
+Depending on the View on an Object it can be categorized in different Folders. For Example a Photo of a Flower, that you have shot on your Vacation, can be put into a generic Folder "Flowers" and also into a Folder "My-Great-Vacation".
+
+So instead of organizing Files in a [Tree](600066.md), like it is normally done in Windows-Explorer or Mac-Finder, they are stored in an universal [Graph](600087.md), where *each* "File" is just a [Reference](60039.md) to the real [Dings-Object](300000001.md).
+
+
 ## Contributing <a id="10000"/>
 
 In Order to Contribute you first have to be registered as a [Dings-User](300000037.md). Depending on your User-Verification you can contribute over different [Communication-Systems](1000020002.md), like E-Mail, Telephone or GitHub.
