--- a/91100001.md
+++ b/91100001.md
@@ -2,8 +2,9 @@
 
 Herr-von-Ribbeck-auf-Ribbeck-im-Havelland is a [Poem](60005002.md) from [Theodor-Fontane](70000084.md).
 
-## Text
+## Words
 
+```poem
 Herr von Ribbeck auf Ribbeck im Havelland,
 Ein Birnbaum in seinem Garten stand,
 Und kam die goldene Herbsteszeit
@@ -52,6 +53,7 @@ Kumm man röwer, ick gew' di 'ne Birn.«
 
 So spendet Segen noch immer die Hand
 Des von Ribbeck auf Ribbeck im Havelland.
+```
 
 ### Information
 
