--- a/91100002.md
+++ b/91100002.md
@@ -1,60 +1,7 @@
-# Innenwelten
+# Innenwelten <a id="0"/>
 
 Innenwelten is a [Poem](60005002.md) from [Mihaela-Claudia_Condrat](1971091181.md).
 
-## Words
+## Words <a id="1000"/>
 
-````poem
-innenansichten
-innnenwelten
-
-wie bringen wir sie zusammen
-wie versöhnen wir sie
-wie schaffen wir es
-sie ins außen zu ziehen
-
-wir hängen unsere erinnerungen
-an diesem herbst auf
-in nostalgie und sehnsucht eingehüllt
-sucht unser wesen die schönheit der welt
-verstreut in allen vier winde
-dann stück für stück
-schritt für schritt
-
-zeitnah
-zeitfern
-zeitlos
-
-wie in einer herbstelegie
-grauen in bildern tristessen
-mit den augen der wörter
-mit dem schweigen der wörter
-mit den klängen der wörter
-
-....
-
-innenwelten
-und was wenn all diese
-in uns zerschellen
-in uns zerbrechen
-und was wenn wir weggehen müssen
-uns von unseren liebsten entfernen
-auf beladenen schiffen
-das land verlassen
-
-eine welt schließt sich
-
-schaffen wir es noch briefe zu schreiben
-schaffen es die zurückgebliebene sie
-zu lesen und was wenn sie
-die buchstaben nicht mehr kennen
-```
-
-## Information
-
-- Original-Name: [innenwelten](91100002.md)
-- Source: E-Mail [Mihaela](1971091181.md)->[Michael](0.md), Bct-2024.01.05-10:37
-
-### Usage-Rights
-
-- [Usage-Right](670005.md): Telephone-Call [Michael](0.md)->[Mihaela](1971091181.md), Bct-2024.01.05-10:11
+![innenwelten](400000218.txt)
