--- a/300100001.md
+++ b/300100001.md
@@ -75,6 +75,8 @@ This is more [Work](60036.md) at the [Beginning](60154.md), but in the End it pa
 
 Through the [Connection](60006.md) of [Dings-Objects](300000001.md) much more [Value](700030.md) is created out of your Data and a lot of Redundancy is removed, which saves [Time](10000002.md), [Money](6666.md) and [Energy](10000040.md). The good [Organization](60011.md) allows more [Clarity](700029.md) for the Fight against the current [Chaos](60183.md) in our (personal) Digital-World.
 
+Besides the Support of a good System, also the Users have some Responsibility to use it correctly and therefore one Part of the Project will also be the Education of Dings-User to do it right.
+
 ## Basics <a id="2000"/>
 
 ### Objects <a id="2010"/>
