--- a/300030007.md
+++ b/300030007.md
@@ -40,7 +40,7 @@ $ cp Work-Dir/13.vimrc ~/.vimrc
 ## Python-Packages
 
 ```bash
-$ pip3 install pytz tzlocal numpy matplotlib bitmath opencv-python pcloud exif pyexiftool mutagen
+$ pip3 install pytz tzlocal numpy matplotlib bitmath opencv-python pcloud exif pyexiftool mutagen pypandoc
 ```
 
 ## Install Apache
