--- a/91100002.md
+++ b/91100002.md
@@ -2,10 +2,4 @@
 
 Innenwelten is a [Poem](60005002.md) from [Mihaela-Claudia_Condrat](1971091181.md).
 
-## Words <a id="1000"/>
-
-![From Mihaela's E-Mail](400000218.txt)
-
-## Information <a id="2000"/>
-
-- Original-Name: [innenwelten](91100002.md)
+![innenwelten](400000218.txt)
