--- a/91100003.md
+++ b/91100003.md
@@ -2,10 +2,4 @@
 
 Diese-wenigen-Worte is a [Poem](60005002.md) from [Mihaela-Claudia_Condrat](1971091181.md).
 
-## Words <a id="1000"/>
-
-![From Mihaela's E-Mail](400000220.txt)
-
-## Information <a id="2000"/>
-
-- Original-Name: [diese wenigen worte](91100003.md)
+![diese wenigen worte](400000220.txt)
