--- a/91100004.md
+++ b/91100004.md
@@ -2,10 +2,4 @@
 
 Entfaltete-Träume is a [Poem](60005002.md) from [Mihaela-Claudia_Condrat](1971091181.md).
 
-## Words <a id="1000"/>
-
-![From Mihaela's E-Mail](400000221.txt)
-
-## Information <a id="2000"/>
-
-- Original-Name: [entfaltete träume](91100004.md)
+![entfaltete träume](400000221.txt)
