Add Why not done before?

--- a/300100001.md
+++ b/300100001.md
@@ -255,6 +255,11 @@ Depending on the View on an Object it can be categorized in different Folders. F
 
 So instead of organizing Files in a [Tree](600066.md), like it is normally done in Windows-Explorer or Mac-Finder, they are stored in an universal [Graph](600087.md), where *each* "File" is just a [Reference](60039.md) to the real [Dings-Object](300000001.md).
 
+## Why not done before? <a id="11000"/>
+
+In the Past several promising Approaches have been already made to implement a similar System. Mentioned should be the [IBM-AS/400](9100004.md) and [Xandadu](9300005.md).
+
+The Former (probably) was not very successful, because back then in the 1980ths the Computers have just not been fast and big enough. The Later (probably) failed, because of Lack of good Computer-Experts.
 
 ## Contributing <a id="10000"/>
 
