--- a/71000022.md
+++ b/71000022.md
@@ -1,3 +1,7 @@
 # Bi-Yän-Lu
 
 The Bi-Yän-Lu is a [Book](700054.md).
+
+## Links
+
+- Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/Blue_Cliff_Record)
