--- a/71000022.md
+++ b/71000022.md
@@ -2,6 +2,10 @@
 
 The Bi-Yän-Lu is a [Book](700054.md).
 
+## Photos
+
+![Hard-Cover-Book](400000227.jpg)
+
 ## Links
 
 - Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/Blue_Cliff_Record)
