--- a/70000010.md
+++ b/70000010.md
@@ -1,3 +1,3 @@
-# Alan_Mathison_Turing
+# AlanMathison_Turing
 
-Alan_Mathison_Turing is a [Human](40000001.md).
+Alan-Mathison_Turing is a [Human](40000001.md).
