--- a/9010000.md
+++ b/9010000.md
@@ -1,3 +1,3 @@
 # Programming-Language
 
-A Programming-Language is ...
+A Programming-Language is a [Language](600041.md) for [Computer-Systems](9000153.md).
