--- a/0.md
+++ b/0.md
@@ -1,10 +1,14 @@
 # Michael-Georg_Holzheu <a id="1"/>
 
-<img src="400000028.jpg" alt="Michael_Holzheu" style="width:256px; height: 256px;"/>
-
 Michael-Georg_Holzheu is a [Human](40000001.md).
 
-## Identities <a id="1000"/>
+## Profile <a id="1000"/>
+
+### Photo  <a id="1010"/>
+
+![Michael on VCFB-2019](400000028.jpg, style="width:256px; height: 256px; display: block; margin-left: auto; margin-right: auto;")
+
+### Identities <a id="1020"/>
 
 - [michael@E-Mail](1971099005.md)
 - [michael.holzheu@Facebook](1971099004.md)
