--- a/23.md
+++ b/23.md
@@ -1,5 +1,7 @@
 # About-Dings-Project
 
+About-Dings-Project is a [Blog](700019.md) about the [Dings-Project](300000006.md).
+
 ## Table of Contents <a id="1"/>
 
 - [Day-118](#18000) Politics and Religion
